--- a/Novateca.Web/Novateca.Web/Views/Books/Edit.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_UserPagesLayout.cshtml";
 }
 
-<h2>Página de edição</h2>
+<h2>Editar cadastro de livro</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
