--- a/Novateca.Web/Novateca.Web/Views/Multimedias/Index.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Multimedias/Index.cshtml
@@ -134,11 +134,11 @@
                         <p> <p class="card-abstract text-capitalize center" style="height: 100px; font-size: 10px">@Html.DisplayFor(modelItem => item.Abstract)</p>
                     </div>
                     <div class="card-options text-center">
-                        <a asp-action="Edit" asp-route-id="@item.MultimediaID"><img src="~/images/edit.png" style="width:30px; height:30px; padding-right: 5px" /></a>
-                        <a asp-action="Create" asp-route-id="@item.MultimediaID"><img src="~/images/like.png" style="width:30px; height:30px; padding-right: 5px" /></a>
-                        <a asp-action="Create" asp-route-id="@item.MultimediaID"><img src="~/images/comment.png" style="width:30px; height:30px; padding-right: 5px" /></a>
-                        <a asp-action="Create" asp-route-id="@item.MultimediaID"><img src="~/images/favorite.png" style="width:30px; height:30px; padding-right: 5px" /></a>
-                        <a asp-action="Delete" asp-route-id="@item.MultimediaID"><img src="~/images/remove.png" style="width:30px; height:30px; padding-left: 5px" /></a>
+                        <a asp-action="Edit" asp-route-id="@item.MultimediaID"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a>
+                        <div multimediaId="@item.MultimediaID" class="btnLike" style="display: inline-block;cursor:pointer"><i class="fa @(ViewBag.MultimediaLikes.Contains(item.MultimediaID) ? "fa-heart": "fa-heart-o") fa-2x" aria-hidden="true" style="color: red"></i></div>
+                        <a asp-action="Create" asp-route-id="@item.MultimediaID"><i class="fa fa-commenting fa-2x" aria-hidden="true"></i></a>
+                        <div multimediaId="@item.MultimediaID" class="btnFavorite" style="display: inline-block;cursor:pointer"><i class="fa @(ViewBag.FavoriteMultimedias.Contains(item.MultimediaID) ? "fa-star": "fa-star-o") fa-2x" aria-hidden="true" style="color: yellow"></i></div>
+                        <a asp-action="Delete" asp-route-id="@item.MultimediaID"><i class="fa fa-trash-o fa-2x" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -146,5 +146,45 @@
     }
 </div>
 
+@section Scripts{
+    <script>
+    $(".btnLike").on("click", function () {
+        obj = $(this);
+        $.ajax({
+            method: "POST",
+            url: "@Url.Action("Like","MultimediaLikes")",
+            dataType: "json",
+            data: { id: obj.attr("multimediaId") },
+            success: function (data) {
+                //$.notify(data, "success");
+                obj.css({ "color": "red" })
+                location.reload();
+            }
+        });
+    });
 
+     $(".btnFavorite").on("click", function () {
+        obj = $(this);
+        $.ajax({
+            method: "POST",
+            url: "@Url.Action("Favorite","FavoriteMultimedias")",
+            dataType: "json",
+            data: { id: obj.attr("multimediaId") },
+            success: function (data) {
+                //$.notify(data, "success");
+                obj.css({ "color": "yellow" })
+                location.reload();
+            }
+        });
+    });
+
+    </script>
+}
+
+<style>
+    .fa-2x {
+        font-size: 1.7em;
+        color: #02223e;
+    }
+</style>
 
