--- a/Novateca.Web/Novateca.Web/Views/Newspapers/Index.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Newspapers/Index.cshtml
@@ -10,75 +10,75 @@
 </p>
 @*<h2>Index</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>*@
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>*@
 @*<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TitleMain)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SubTitle)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Edition)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Locate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PublishingCompany)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Subject)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CurrentPeriodicity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.URLImage)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TitleMain)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SubTitle)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Edition)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Locate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PublishingCompany)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Subject)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CurrentPeriodicity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.URLImage)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.NewspaperID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.NewspaperID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.NewspaperID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>*@
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.TitleMain)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.SubTitle)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Edition)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Locate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PublishingCompany)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Subject)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CurrentPeriodicity)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.URLImage)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TitleMain)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SubTitle)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Edition)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Locate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PublishingCompany)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Subject)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CurrentPeriodicity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.URLImage)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.NewspaperID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.NewspaperID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.NewspaperID">Delete</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>*@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     @foreach (var item in Model)
     {
@@ -93,11 +93,54 @@
                     <p class="card-author text-center" style="font-size: 12px">@Html.DisplayFor(modelItem => item.PublishingCompany)</p>
                     <p class="card-abstract text-center" style="font-size: 10px">@Html.DisplayFor(modelItem => item.Edition)</p>
                     <div class="card-options text-center">
-                        <a asp-action="Edit" asp-route-id="@item.NewspaperID"><img src="~/images/edit.png" style="width:30px; height:30px; padding-right: 5px" /></a>
-                        <a asp-action="Delete" asp-route-id="@item.NewspaperID"><img src="~/images/remove.png" style="width:30px; height:30px; padding-left: 5px" /></a>|
+                        <a asp-action="Edit" asp-route-id="@item.NewspaperID"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a>
+                        <div newspaperId="@item.NewspaperID" class="btnLike" style="display: inline-block;cursor:pointer"><i class="fa @(ViewBag.NewspaperLikes.Contains(item.NewspaperID) ? "fa-heart": "fa-heart-o") fa-2x" aria-hidden="true" style="color: red"></i></div>
+                        <a asp-action="Create" asp-route-id="@item.NewspaperID"><i class="fa fa-commenting fa-2x" aria-hidden="true"></i></a>
+                        <div newspaperId="@item.NewspaperID" class="btnFavorite" style="display: inline-block;cursor:pointer"><i class="fa @(ViewBag.FavoriteNewspapers.Contains(item.NewspaperID) ? "fa-star": "fa-star-o") fa-2x" aria-hidden="true" style="color: yellow"></i></div>
+                        <a asp-action="Delete" asp-route-id="@item.NewspaperID"><i class="fa fa-trash-o fa-2x" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     }
 </div>
+
+@section Scripts{
+    <script>
+    $(".btnLike").on("click", function () {
+        obj = $(this);
+        $.ajax({
+            method: "POST",
+            url: "@Url.Action("Like","NewspaperLikes")",
+            dataType: "json",
+            data: { id: obj.attr("newspaperId") },
+            success: function (data) {
+                //$.notify(data, "success");
+                location.reload();
+            }
+        });
+    });
+
+     $(".btnFavorite").on("click", function () {
+        obj = $(this);
+        $.ajax({
+            method: "POST",
+            url: "@Url.Action("Favorite","FavoriteNewspapers")",
+            dataType: "json",
+            data: { id: obj.attr("newspaperId") },
+            success: function (data) {
+                //$.notify(data, "success");
+                location.reload();
+            }
+        });
+    });
+
+    </script>
+}
+
+<style>
+    .fa-2x {
+        font-size: 1.7em;
+        color: #02223e;
+    }
+</style>
